--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,34 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<script src="./script.js"></script>
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	<div class="row mt-3">
-		<div class="col-4"></div>
-		<div class="col-4">
-			<p class="text-center">Загрузить задачи из файла</p>
-			<input id="file-open" class="form-control" type="file" accept=".json" onchange="LoadDataFromFile(this)">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">
+			<i class="bi bi-app-indicator"></i>
+			<span>simple-to-do-list</span>
+		</a>
+		<div class="collapse navbar-collapse ms-3" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<label for="file-open">
+							<i class="bi bi-arrow-bar-up"></i>
+						</label>
+						<input id="file-open" type="file" accept=".json" onchange="LoadDataFromFile(this)">
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#" role="button" onclick="SaveDataToFile(this)">
+						<i class="bi bi-arrow-down-square"></i>
+					</a>
+				</li>
+			</ul>
 		</div>
 	</div>
+</nav>
 	<div class="row mt-5">
 		<div class="col-4"></div>
 		<div class="col-4">
@@ -23,11 +42,5 @@
 		</div>
 	</div>
 	<div id="container" class="row mt-2"></div>
-	<div class="row mt-5">
-		<div class="col-5"></div>
-		<div class="col-4">
-			<a class="btn btn-primary" href="#" role="button" onclick="SaveDataToFile(this)">Сохранить задачи в файл</a>
-		</div>
-	</div>
 </body>
 <script>AddEvents()</script>
