--- a/src/index.html
+++ b/src/index.html
@@ -6,29 +6,35 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
-	<div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary row">
+	<div class="col-2">
 		<a class="navbar-brand" href="#">
 			<i class="bi bi-app-indicator"></i>
 			<span>simple-to-do-list</span>
 		</a>
-		<div class="collapse navbar-collapse ms-3" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#">
-						<label for="file-open">
-							<i class="bi bi-arrow-bar-up"></i>
-						</label>
-						<input id="file-open" type="file" accept=".json" onchange="LoadDataFromFile(this)">
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#" role="button" onclick="SaveDataToFile(this)">
-						<i class="bi bi-arrow-down-square"></i>
-					</a>
-				</li>
-			</ul>
-		</div>
+	</div>
+	<div class="col-2">
+		<ul class="ms-3 navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="#">
+					<label for="file-open">
+						<i class="bi bi-arrow-bar-up"></i>
+					</label>
+					<input id="file-open" type="file" accept=".json" onchange="LoadDataFromFile(this)">
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#" role="button" onclick="SaveDataToFile(this)">
+					<i class="bi bi-arrow-down-square"></i>
+				</a>
+			</li>
+		</ul>
+	</div>
+	<div class="col-7"></div>
+	<div class="col-1">
+		<button class="btn btn-info">
+			<i class="bi bi-back"></i>
+		</button>
 	</div>
 </nav>
 	<div class="row mt-5">
