--- a/src/index.html
+++ b/src/index.html
@@ -6,31 +6,60 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="#">
-			<i class="bi bi-app-indicator"></i>
-			<span>simple-to-do-list</span>
-		</a>
-		<div class="collapse navbar-collapse ms-3" id="navbarNavDropdown">
-			<ul class="navbar-nav">
+	<nav class="row navbar navbar-expand-lg navbar-light bg-primary" id="main-menu">
+		<div class="col-2">
+			<a class="navbar-brand" href="#">
+				<i class="bi bi-app-indicator h2"></i>
+				<span>simple-to-do-list</span>
+			</a>
+		</div>
+		<div class="col-2">
+			<ul class="ms-3 navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="#">
 						<label for="file-open">
-							<i class="bi bi-arrow-bar-up"></i>
+							<i class="bi bi-arrow-bar-up h3"></i>
 						</label>
 						<input id="file-open" type="file" accept=".json" onchange="LoadDataFromFile(this)">
 					</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#" role="button" onclick="SaveDataToFile(this)">
-						<i class="bi bi-arrow-down-square"></i>
+						<i class="bi bi-arrow-down-square h3"></i>
 					</a>
 				</li>
 			</ul>
 		</div>
-	</div>
-</nav>
+		<div class="col-6"></div>
+		<div class="col-2">
+			<div class="btn-group dropstart">
+				<button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown"
+						aria-expanded="false">
+					<i class="bi bi-back"></i>
+				</button>
+				<ul class="dropdown-menu">
+					<li class="d-flex justify-content-evenly">
+						<a class="dropdown-item bg-primary background-color-item" onclick="ChangeBackgroundColor('bg-primary')"></a>
+						<a class="dropdown-item bg-success background-color-item" onclick="ChangeBackgroundColor('bg-success')"></a>
+						<a class="dropdown-item bg-danger background-color-item" onclick="ChangeBackgroundColor('bg-danger')"></a>
+					</li>
+					<li class="d-flex justify-content-evenly mt-2">
+						<a class="dropdown-item bg-warning background-color-item" onclick="ChangeBackgroundColor('bg-warning')"></a>
+						<a class="dropdown-item bg-info background-color-item" onclick="ChangeBackgroundColor('bg-info')"></a>
+						<a class="dropdown-item bg-secondary background-color-item" onclick="ChangeBackgroundColor('bg-secondary')"></a>
+					</li>
+					<li class="d-flex justify-content-center mt-2">
+						<a class="nav-link" href="#">
+							<label for="file-open-image">
+								<i class="bi bi-arrow-up-square-fill h1"></i>
+							</label>
+							<input class="dropdown-item" id="file-open-image" type="file" onchange="LoadImageAsBackgroundColor(this)">
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<div class="row mt-5">
 		<div class="col-4"></div>
 		<div class="col-4">
