Added tooltip for download buttons. Closed #22 (#24)

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">
 						<label for="file-open">
-							<i class="bi bi-arrow-bar-up h3"></i>
+							<i class="bi bi-arrow-bar-up h3" title="Загрузить задачи из файла"></i>
 						</label>
 						<input id="file-open" type="file" accept=".json" onchange="LoadDataFromFile(this)">
 					</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#" role="button" onclick="SaveDataToFile(this)">
-						<i class="bi bi-arrow-down-square h3"></i>
+						<i class="bi bi-arrow-down-square h3" title="Сохранить задачи в файл"></i>
 					</a>
 				</li>
 			</ul>
