--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>To-do list</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
 	<nav class="row navbar navbar-expand-lg navbar-light bg-primary" id="main-menu">
 		<div class="col-2">
@@ -21,14 +17,14 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">
 						<label for="file-open">
-							<i class="bi bi-arrow-bar-up h3"></i>
+							<i class="bi bi-arrow-bar-up h3" title="Загрузить задачи из файла"></i>
 						</label>
-						<input id="file-open" type="file" accept=".json" onchange="LoadDataFromFile(this)">
+						<input id="file-open" type="file" accept=".json">
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#" role="button" onclick="SaveDataToFile(this)">
-						<i class="bi bi-arrow-down-square h3"></i>
+					<a id="btn-save" class="nav-link" href="#" role="button">
+						<i class="bi bi-arrow-down-square h3" title="Сохранить задачи в файл"></i>
 					</a>
 				</li>
 			</ul>
@@ -36,34 +32,27 @@
 		<div class="col-6"></div>
 		<div class="col-2">
 			<div class="btn-group dropstart">
-				<button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown"
-					aria-expanded="false">
+				<button id= "btnDropDown"type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown"
+						aria-expanded="false">
 					<i class="bi bi-back"></i>
 				</button>
 				<ul class="dropdown-menu">
 					<li class="d-flex justify-content-evenly">
-						<a class="dropdown-item bg-primary background-color-item"
-							onclick="ChangeBackgroundColor('bg-primary')"></a>
-						<a class="dropdown-item bg-success background-color-item"
-							onclick="ChangeBackgroundColor('bg-success')"></a>
-						<a class="dropdown-item bg-danger background-color-item"
-							onclick="ChangeBackgroundColor('bg-danger')"></a>
+						<a class="dropdown-item bg-primary background-color-item"></a>
+						<a class="dropdown-item bg-success background-color-item"></a>
+						<a class="dropdown-item bg-danger background-color-item"></a>
 					</li>
 					<li class="d-flex justify-content-evenly mt-2">
-						<a class="dropdown-item bg-warning background-color-item"
-							onclick="ChangeBackgroundColor('bg-warning')"></a>
-						<a class="dropdown-item bg-info background-color-item"
-							onclick="ChangeBackgroundColor('bg-info')"></a>
-						<a class="dropdown-item bg-secondary background-color-item"
-							onclick="ChangeBackgroundColor('bg-secondary')"></a>
+						<a class="dropdown-item bg-warning background-color-item"></a>
+						<a class="dropdown-item bg-info background-color-item"></a>
+						<a class="dropdown-item bg-secondary background-color-item"></a>
 					</li>
 					<li class="d-flex justify-content-center mt-2">
 						<a class="nav-link" href="#">
 							<label for="file-open-image">
 								<i class="bi bi-arrow-up-square-fill h1"></i>
 							</label>
-							<input class="dropdown-item" id="file-open-image" type="file"
-								onchange="LoadImageAsBackgroundColor(this)">
+							<input id="file-open-image" class="dropdown-item"  type="file">
 						</a>
 					</li>
 				</ul>
@@ -75,14 +64,12 @@
 		<div class="col-4">
 			<p class="text-center">Создать задачу</p>
 			<div class="input-group">
-				<input id="task-text" type="text" class="form-control" placeholder="Введите название задачи"
-					aria-label="Введите название задачи" aria-describedby="button-addon">
-				<button class="btn btn-outline-secondary" type="reset" id="button-addon"
-					onclick="AddTask(GetTextFromTaskInputField())">Добавить задачу в список</button>
+				<input id="task-text" type="text" class="form-control" placeholder="Введите название задачи" aria-label="Введите название задачи" aria-describedby="button-addon">
+				<button id="button-addon" class="btn btn-outline-secondary" type="reset">Добавить задачу в список</button>
 			</div>
 		</div>
 	</div>
 	<div id="container" class="row mt-2"></div>
 </body>
-
-</html>
+<script src="./script.js"></script>
+<script>AddEvents()</script>
