--- a/public/index.html
+++ b/public/index.html
@@ -5,71 +5,5 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	<nav class="row navbar navbar-expand-lg navbar-light bg-primary" id="main-menu">
-		<div class="col-2">
-			<a class="navbar-brand" href="#">
-				<i class="bi bi-app-indicator h2"></i>
-				<span>simple-to-do-list</span>
-			</a>
-		</div>
-		<div class="col-2">
-			<ul class="ms-3 navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#">
-						<label for="file-open">
-							<i class="bi bi-arrow-bar-up h3" title="Загрузить задачи из файла"></i>
-						</label>
-						<input id="file-open" type="file" accept=".json">
-					</a>
-				</li>
-				<li class="nav-item">
-					<a id="btn-save" class="nav-link" href="#" role="button">
-						<i class="bi bi-arrow-down-square h3" title="Сохранить задачи в файл"></i>
-					</a>
-				</li>
-			</ul>
-		</div>
-		<div class="col-6"></div>
-		<div class="col-2">
-			<div class="btn-group dropstart">
-				<button id= "btnDropDown"type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown"
-						aria-expanded="false">
-					<i class="bi bi-back"></i>
-				</button>
-				<ul class="dropdown-menu">
-					<li class="d-flex justify-content-evenly">
-						<a class="dropdown-item bg-primary background-color-item"></a>
-						<a class="dropdown-item bg-success background-color-item"></a>
-						<a class="dropdown-item bg-danger background-color-item"></a>
-					</li>
-					<li class="d-flex justify-content-evenly mt-2">
-						<a class="dropdown-item bg-warning background-color-item"></a>
-						<a class="dropdown-item bg-info background-color-item"></a>
-						<a class="dropdown-item bg-secondary background-color-item"></a>
-					</li>
-					<li class="d-flex justify-content-center mt-2">
-						<a class="nav-link" href="#">
-							<label for="file-open-image">
-								<i class="bi bi-arrow-up-square-fill h1"></i>
-							</label>
-							<input id="file-open-image" class="dropdown-item"  type="file">
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="row mt-5">
-		<div class="col-4"></div>
-		<div class="col-4">
-			<p class="text-center">Создать задачу</p>
-			<div class="input-group">
-				<input id="task-text" type="text" class="form-control" placeholder="Введите название задачи" aria-label="Введите название задачи" aria-describedby="button-addon">
-				<button id="button-addon" class="btn btn-outline-secondary" type="reset">Добавить задачу в список</button>
-			</div>
-		</div>
-	</div>
-	<div id="container" class="row mt-2"></div>
+	<div id="root"></div>
 </body>
-<script src="./script.js"></script>
-<script>AddEvents()</script>
