--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="./task.js"></script>
+	<script type="text/javascript" src="./task-list.js"></script>
+	<script type="text/javascript" src="./helper.js"></script>
+	<script type="text/javascript" src="./script.js"></script>
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -66,10 +70,9 @@
 			<div class="input-group">
 				<input id="task-text" type="text" class="form-control" placeholder="Введите название задачи" aria-label="Введите название задачи" aria-describedby="button-addon">
 				<button id="button-addon" class="btn btn-outline-secondary" type="reset">Добавить задачу в список</button>
+				
 			</div>
 		</div>
 	</div>
 	<div id="container" class="row mt-2"></div>
 </body>
-<script src="./script.js"></script>
-<script>AddEvents()</script>
