Fixed incorrect icon load. Closed. #28

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <head>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+		crossorigin="anonymous"></script>
 	<script type="text/javascript" src="./task.js"></script>
 	<script type="text/javascript" src="./task-list.js"></script>
 	<script type="text/javascript" src="./helper.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
 	<link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 	<nav class="row navbar navbar-expand-lg navbar-light bg-primary" id="main-menu">
 		<div class="col-2">
@@ -36,8 +40,8 @@
 		<div class="col-6"></div>
 		<div class="col-2">
 			<div class="btn-group dropstart">
-				<button id= "btnDropDown"type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown"
-						aria-expanded="false">
+				<button id="btnDropDown" type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown"
+					aria-expanded="false">
 					<i class="bi bi-back"></i>
 				</button>
 				<ul class="dropdown-menu">
@@ -56,7 +60,7 @@
 							<label for="file-open-image">
 								<i class="bi bi-arrow-up-square-fill h1"></i>
 							</label>
-							<input id="file-open-image" class="dropdown-item"  type="file">
+							<input id="file-open-image" class="dropdown-item" type="file">
 						</a>
 					</li>
 				</ul>
@@ -68,9 +72,11 @@
 		<div class="col-4">
 			<p class="text-center">Создать задачу</p>
 			<div class="input-group">
-				<input id="task-text" type="text" class="form-control" placeholder="Введите название задачи" aria-label="Введите название задачи" aria-describedby="button-addon">
-				<button id="button-addon" class="btn btn-outline-secondary" type="reset">Добавить задачу в список</button>
-				
+				<input id="task-text" type="text" class="form-control" placeholder="Введите название задачи"
+					aria-label="Введите название задачи" aria-describedby="button-addon">
+				<button id="button-addon" class="btn btn-outline-secondary" type="reset">Добавить задачу в
+					список</button>
+
 			</div>
 		</div>
 	</div>
